/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package tradefed.monitoring.server;

option java_multiple_files = true;
option java_package = "com.proto.tradefed.monitoring";
option java_outer_classname = "TradefederationService";

option java_generic_services = true;

// A service associated with a Tradefed Instance that gives information.
service TradefedInformation {

  rpc getInvocations(GetInvocationsRequest) returns (GetInvocationsResponse) {}
}

// A request to get all the currently running invocations
message GetInvocationsRequest {
  string request_id = 1;
}

// A response that lists all the running invocations by id.
message GetInvocationsResponse {
  repeated string invocation_id = 1;
}
